--- a/app/css/main.css
+++ b/app/css/main.css
@@ -138,7 +138,7 @@ input, textarea, select {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Gilroy", sans-serif;
-  height: 61px;
+  height: 60px;
   width: 100%;
   border-radius: 8px;
   border: solid 1px #ced6da;
@@ -1905,7 +1905,8 @@ th {
   margin: 0 0 15px; }
 
 .cabinet-video .row {
-  margin: 0 -15px; }
+  margin: 0 -15px;
+  width: auto; }
 
 .col-3 {
   width: 33.3%;
@@ -2246,7 +2247,8 @@ th {
 .btn-close-sidebar {
   width: 16px;
   height: 16px;
-  position: relative; }
+  position: relative;
+  display: none; }
   .btn-close-sidebar:before, .btn-close-sidebar:after {
     content: '';
     position: absolute;
@@ -2297,7 +2299,9 @@ th {
   .sales-content {
     width: calc(100% - 400px); }
   .footer-info {
-    max-width: 310px; } }
+    max-width: 310px; }
+  .form-cabinet-edit {
+    max-width: 280px; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
@@ -2350,7 +2354,7 @@ th {
     padding: 65px 0; } }
 
 /* Small Devices, Tablets */
-@media only screen and (max-width: 940px) {
+@media only screen and (max-width: 950px) {
   .sales-content {
     padding: 0;
     width: 100%;
@@ -2394,6 +2398,7 @@ th {
   .box-analytics {
     margin: 31px 0 0; }
   .table-wrapper {
+    margin: 0;
     overflow-x: auto;
     padding: 15px 10px 22px 15px; }
     .table-wrapper::-webkit-scrollbar-thumb:horizontal {
@@ -2405,7 +2410,22 @@ th {
       background: #f0f4f6;
       border-radius: 2px; }
   .table-scroll {
-    min-width: 800px; } }
+    min-width: 800px; }
+  .cabinet-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+  .form-cabinet-edit {
+    margin: 0 0 33px;
+    max-width: 376px; }
+    .form-cabinet-edit:last-child {
+      margin: 0; }
+  .box-way {
+    margin: 36px 0 0; } }
 
 @media only screen and (max-width: 810px) {
   .header-top {
@@ -2567,6 +2587,8 @@ th {
     width: 100%;
     top: 0;
     left: 0; }
+  .btn-close-sidebar {
+    display: block; }
   .time-box {
     margin: 19px auto 25px; }
   .box-text-data {
@@ -2594,7 +2616,32 @@ th {
     font-size: 12px;
     border-radius: 10px; }
   .box-analytics h3 {
-    font-size: 18px; } }
+    font-size: 18px; }
+  .video-box {
+    margin: 0 0 19px;
+    font-size: 12px; }
+    .video-box h3 {
+      font-size: 14px;
+      margin: 0 0 8px; }
+  .video-box__body {
+    padding: 11px 0 0; }
+  .cabinet-video .description-plane {
+    margin: 0 0 32px; }
+  .cabinet-row {
+    margin: 33px 0 0; }
+  .table-text {
+    margin: 21px 0 0; }
+  .list-currency li {
+    margin: 0 12px 10px 0; }
+    .list-currency li:last-child {
+      margin: 0 0 10px; }
+  .form-group label {
+    width: 100%;
+    margin: 0 0 15px; }
+  .form-cabinet textarea {
+    height: 173px; }
+  .form-cabinet label {
+    margin: 0 0 15px; } }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 575px) {
@@ -2612,7 +2659,12 @@ th {
     -ms-flex-line-pack: start;
         align-content: flex-start; }
     .block_title .svg-icon {
-      margin: 9px 0 0 auto; } }
+      margin: 9px 0 0 auto; }
+  .video-box__preview {
+    height: 129px; }
+  .video-box .btn-play {
+    width: 21px;
+    height: 23px; } }
 
 @media only screen and (max-width: 480px) {
   header .logo {
@@ -2634,9 +2686,11 @@ th {
   .box-subscribe-item__head {
     margin: 0 0 20px; }
   .title-description {
-    margin: 0 0 35px; }
+    margin: 0 0 30px; }
   .box-subscribe-item {
-    padding: 25px 9px 19px 11px; } }
+    padding: 25px 9px 19px 11px; }
+  .col-3 {
+    width: 50%; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 380px) {
