--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -99,7 +99,7 @@ input, textarea, select
   appearance: none
   box-sizing: border-box
   font-family: $default-font
-  height: 61px
+  height: 60px
   width: 100%
   border-radius: 8px
   border: solid 1px #ced6da
@@ -1693,6 +1693,7 @@ th
 
   .row
     margin: 0 -15px
+    width: auto
 
 
 .col-3
@@ -2013,6 +2014,7 @@ th
   width: 16px
   height: 16px
   position: relative
+  display: none
   &:before, &:after
     content: ''
     position: absolute
