--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -52,6 +52,8 @@
   .form-cabinet-edit
     max-width: 280px
 
+
+
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px)
   .menu li
@@ -118,6 +120,9 @@
 
   .reviews
     padding: 65px 0
+
+  .authorisation-content
+    padding: 40px 20px
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 950px)
@@ -200,6 +205,8 @@
 
   .box-way
     margin: 36px 0 0
+
+
 
 @media only screen and (max-width: 810px)
   .header-top
@@ -460,6 +467,31 @@
 
   .form-cabinet label
     margin: 0 0 15px
+
+  .authorisation-box
+    width: 100%
+    padding: 0 0 80px
+    .box-text
+      margin: 82px auto 0
+    .btn
+      max-width: 224px
+
+  .authorisation-content
+    width: 100%
+    padding: 60px 0
+    &:before
+      left: -20px
+    .consent
+      margin: 40px auto 0
+
+  .authorisation-section
+    background: url("../img/bg-6-mob.jpg") no-repeat center
+      size: cover
+    h1
+      font-size: 28px
+    .logo
+      margin: 12px 0 0
+      max-width: 108px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 575px)
