--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -206,7 +206,14 @@
   .box-way
     margin: 36px 0 0
 
-
+  .balance
+    flex-direction: column
+    align-items: center
+    text-align: center
+    padding: 28px 17px 31px
+    .btn
+      max-width: none
+      margin: 30px auto 0
 
 @media only screen and (max-width: 810px)
   .header-top
@@ -493,6 +500,27 @@
       margin: 12px 0 0
       max-width: 108px
 
+  .title-description
+    margin: 0 0 33px
+
+  .box-figure
+    margin: 30px 0 0
+
+  .box-color
+    margin: 0 0 15px
+
+  .box-color-block
+    margin: 0 15px 15px 0
+
+  .box-statistic
+    margin: 15px 0 0
+    padding: 15px 8px 25px 10px
+    h3
+      font-size: 16px
+
+  .label-link input
+    padding: 0 50px 0 20px
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 575px)
   .about-box
@@ -516,6 +544,9 @@
   .video-box .btn-play
     width: 21px
     height: 23px
+
+  .balance-val span
+    margin: 0 0 0 17px
 
 @media only screen and (max-width: 480px)
   header
@@ -552,6 +583,9 @@
   .col-3
     width: 50%
 
+  .balance-val
+    font-size: 22px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 380px)
   .countdown-time
@@ -564,6 +598,9 @@
     padding: 0 10px
     font-size: 12px
     margin: -10px auto 20px
+
+  .balance-val
+    justify-content: center
 
 @media only screen and (max-width: 360px)
   h1
