--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2031,6 +2031,96 @@ th
   &:after
     transform: rotate(135deg)
 
+//balance
+.balance
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
+  border-radius: 5px
+  background: $blue
+  color: #fff
+  padding: 16px 20px 17px 19px
+  .btn
+    max-width: 169px
+    height: 45px
+    border-radius: 8px
+
+.balance-val
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  font-size: 24px
+  font-weight: bold
+  span
+    margin: 0 0 0 19px
+
+.bg-blue
+  background: $blue
+
+.box-color
+  margin: 0 0 20px
+  width: 100%
+  border-radius: 5px
+
+.box-color-row
+  height: 60px
+  max-width: 448px
+
+.box-color-block
+  max-width: 120px
+  height: 120px
+  margin: 0 20px 20px 0
+  &:last-child
+    margin: 0 0 20px
+
+.box-color-block-min
+  height: 100px
+  max-width: 100px
+
+.box-color-wrap
+  width: 100%
+  display: flex
+  align-items: flex-start
+  flex-wrap: wrap
+
+.box-figure
+  margin: 60px 0 0
+
+.box-statistic
+  width: 100%
+  background: #fff
+  padding: 15px 22px 25px 20px
+  border-radius: 10px
+  box-shadow: 0 0 14.9px 3.1px rgba(156, 156, 156, 0.19)
+  margin: 40px 0 0
+  h3
+    font-weight: bold
+    font-size: 18px
+    width: 100%
+    margin: 0 0 14px
+
+.label-link
+  position: relative
+  margin: 0
+  input
+    border: none
+    border-radius: 22.5px
+    background-color: #f2f2f2
+    height: 45px
+    color: #195ddc
+    font-size: 12px
+    font-weight: bold
+    font-family: 'Montserrat', sans-serif
+  .svg-icon
+    width: 20px
+    height: 19px
+    right: 24px
+    fill: #000
+
+.btn-copy
+  cursor: pointer
 
 @import "media"
 // Всегда в конце
