--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -586,6 +586,20 @@
   .balance-val
     font-size: 22px
 
+  .modal__wrapper .btn
+    margin: 20px auto 0
+
+  .modal__wrapper .row .box-text
+    width: 100%
+    padding: 0
+
+  .modal-img
+    margin: 0 auto 20px
+    width: 100%
+
+  .modal__wrapper
+    padding: 30px 20px
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 380px)
   .countdown-time
