--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2122,5 +2122,111 @@ th
 .btn-copy
   cursor: pointer
 
+.marquee-item
+  color: #fff
+  .date
+    margin: 0 0 0 20px
+    color: $accent
+
+.webTicker-item
+  margin: 0 40px 0 0
+
+.webTicker
+  font-size: 16px
+  background: $text
+  opacity: 1
+
+//modal
+.modal__div
+  position: fixed
+  max-width: 700px
+  width: 100%
+  height: 100%
+  top: 45%
+  left: 50%
+  transform: translate(-50%, -50%)
+  z-index: 101
+  overflow: auto
+  justify-content: center
+  align-items: center
+  flex-direction: column
+  display: none
+  opacity: 0
+
+.modal__wrapper
+  background: #fff
+  width: 100%
+  height: auto
+  overflow: auto
+  margin: 50px auto
+  padding: 30px
+  box-sizing: border-box
+  position: relative
+  h2
+    font-size: 24px
+    margin: 0 0 20px
+  .row
+    align-items: flex-start
+    .box-text
+      width: calc(100% - 200px)
+      padding: 0 0 0 20px
+  .btn
+    margin: 20px 0 0 auto
+    height: 50px
+
+.modal-img
+  width: 200px
+  img
+    width: 100%
+
+.name-img
+  text-align: center
+  margin: 10px auto 0
+  display: inline-block
+  color: $text
+  font-size: 14px
+  width: 100%
+
+.modal-date
+  font-size: 14px
+  color: $text
+  margin: 0 0 10px
+
+
+.overlay
+  z-index: 100
+  position: fixed
+  background-color: #000
+  opacity: 0.8
+  -moz-opacity: 0.8
+  filter: alpha(opacity = 80)
+  width: 100%
+  height: 100%
+  top: 0
+  left: 0
+  cursor: pointer
+  display: none
+
+.modal__close
+  position: absolute
+  width: 20px
+  height: 20px
+  right: 10px
+  top: 10px
+  &:before, &:after
+    content: ''
+    position: absolute
+    left: 8px
+    top: 0
+    width: 1px
+    height: 100%
+    background: $accent
+
+  &:before
+    transform: rotate(45deg)
+
+  &:after
+    transform: rotate(135deg)
+
 @import "media"
 // Всегда в конце
